Fix z-index for navbar

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -6,6 +6,7 @@
 	width: 12vmax;
 	background-color: rgba(255, 0, 0, 0.7);
 	padding: 1vmax;
+	z-index: 1;
 }
 
 #nav-bar a {
